--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-logging.level.root= WARN
-logging.level.pl.put.poznan.sort= DEBUG
+logging.level.root = WARN
+logging.level.pl.put.poznan.sort = DEBUG
+server.port = 8080
