--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 logging.level.root = WARN
 logging.level.pl.put.poznan.sort = DEBUG
 server.port = 8080
+server.error.include-message = always
+server.error.include-binding-errors = always
+spring.main.allow-bean-definition-overriding=true
