Update version in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     </parent>
 
     <groupId>pl.put.poznan</groupId>
-    <artifactId>io-project-architecture</artifactId>
-    <version>0.1</version>
+    <artifactId>sorting-madness</artifactId>
+    <version>1.0</version>
 
 	<properties>
         <java.version>11</java.version>
